--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body{
-  background-color: #a8a8a8;
+  background-color: #ffffff;
 }
 
-.header{
+header{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,19 +17,19 @@ body{
   font-size: 18px;
 }
 
-.header h1{
+header h1{
   padding: 14px 0px;
 }
 
 main{
   margin: 0px 20px;
 }
-h3{
+h2{
   text-align: center;
   padding: 12px 0px;
 }
 
-.option-container{
+.dropdown-section{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,22 +67,22 @@ button:hover{
   background-color: #555;
 }
 
-.search-container{
+.search-section{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1.2rem;
 }
 
 input{
   width: 23%;
-  padding: 12px 16px;
+  padding: 9px 14px;
   border: none;
   border-radius: 12px;
   background-color: #f1f1f1;
   margin: 10px 0px;
   outline: none;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 input:focus{
@@ -93,10 +93,10 @@ input:focus{
 
 #stocktable{
   margin-top: 20px;
-
 }
 
 table{
+  /* border: 1px solid black; */
   width: 100%;
   border-collapse: collapse;
 }
